Atualize páginas e conteúdos do funil
