# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import areasRouter from "./areas";
 import quizRouter from "./quiz";
 import eventsRouter from "./events";
 import freeGroupRouter from "./free-group";
+import opportunityGroupRouter from "./opportunity-group";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(areasRouter);
 router.use(quizRouter);
 router.use(eventsRouter);
 router.use(freeGroupRouter);
+router.use(opportunityGroupRouter);
 
 export default router;
